<resources>
    <string name="app_name">CricTech</string>
    <string name="gp_capacity">Capacity</string>
    <string name="gp_established">Established</string>
    <string name="gp_matches">Matches</string>
    <string name="hide_bottom_view_on_scroll_behavior" translatable="false">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="history">"  The sport of cricket has a known history beginning in the late 16th century England. It became an established sport in the country in the 18th century and developed globally in the 19th and 20th centuries. International matches have been played since the 19th-century and formal Test cricket matches are considered to date from 1877. Cricket is the world's second most popular spectator sport, after association football (soccer).
        Cricket is governed by the International Cricket Council (ICC), which has over one hundred countries and territories in membership, though only twelve currently play Test cricket.
        The game's rules are defined in the Laws of cricket. The game has various formats, ranging from T-10(Ten-10) played in around 90 minutes to Test matches, which can last up to five days."
    </string>
    <string name="origin">"  Cricket was created during Saxon or Norman times by children living in the Weald, an area of dense woodlands and clearings in south-east England that lies across Kent and Sussex. The first definite written reference is from the end of the 16th century.
        There have been several speculations about the game's origins, including some that it was created in France or Flanders. The earliest of these speculative references is from 1300 and concerns the future King Edward II playing at "creag and other games" in both Westminster and Newenden. It has been suggested that "creag" was an Old English word for cricket, but expert opinion is that it was an early spelling of "craic", meaning "fun and games in general".
        It is generally believed that cricket survived as a children's game for many generations before it was increasingly taken up by adults around the beginning of the 17th century. Possibly cricket was derived from bowls, assuming bowls is the older sport, by the intervention of a batsman trying to stop the ball from reaching its target by hitting it away. Playing on sheep-grazed land or in clearings, the original implements may have been a matted lump of sheep's wool (or even a stone or a small lump of wood) as the ball; a stick or a crook or another farm tool as the bat; and a stool or a tree stump or a gate (e.g., a wicket gate) as the wicket.
    </string>
    <string name="name">"  A number of words are thought to be possible sources for the term "cricket". In the earliest definite reference, it was spelled creckett. The name may have been derived from the Middle Dutch krick(-e), meaning a stick; or the Old English cricc or cryce meaning a crutch or staff, or the French word criquet meaning a wooden post. The Middle Dutch word krickstoel means a long low stool used for kneeling in church; this resembled the long low wicket with two stumps used in early cricket. According to Heiner Gillmeister, a European language expert of the University of Bonn, "cricket" derives from the Middle Dutch phrase for hockey, met de (krik ket)sen (i.e., "with the stick chase").
        It is more likely that the terminology of cricket was based on words in use in south-east England at the time and, given trade connections with the County of Flanders, especially in the 15th century when it belonged to the Duchy of Burgundy, many Middle Dutch words found their way into southern English dialects."</string>
    <string name="gambling">"  Cricket thrived after the Restoration in 1660 and is believed to have first attracted gamblers making large bets at this time. It is possible, as believed by some historians, that top-class matches began. In 1664, the "Cavalier" Parliament passed the Gaming Act 1664 which limited stakes to £100, although that was still a fortune at the time, equivalent to about £19,000 in present-day terms . Cricket had become a significant gambling sport by the end of the 17th century, as evidenced in 1697 by a newspaper report of a "great match" played in Sussex which was 11-a-side and played for high stakes of 50 guineas a side.
        With freedom of the press having been granted in 1696, cricket for the first time could be reported in the newspapers. But it was a long time before the newspaper industry adapted sufficiently to provide frequent, comprehensive, coverage. During the first half of the 18th century, press reports tended to focus on the betting rather than the play."</string>
    <string name="patronage">"  Gambling introduced the first patrons because some of the gamblers decided to strengthen their bets by forming their own teams and it is believed the first "county teams" were formed in the aftermath of the Restoration in 1660, especially as members of the nobility were employing "local experts" from village cricket as the earliest professionals.[5] The first known game in which the teams use county names is in 1709, but these types of fixtures were being arranged long before then. The match in 1697 was probably Sussex versus another county.
        The most notable of the early patrons were a group of aristocrats and businessmen who were active from about 1725, which is the time that press coverage became more regular, perhaps as a result of the patrons' influence. These men included the 2nd Duke of Richmond, Sir William Gage, Alan Brodrick and Edwin Stead. For the first time, the press mentions individual players like Thomas Waymark."</string>
    <string name="cricket_expansion">"  Cricket was introduced to North America via the English colonies in the 17th century, probably before it had even reached the north of England. In the 18th century it arrived in other parts of the globe. It was introduced to the West Indies by colonists and to the Indian subcontinent by East India Company mariners in the first half of the century. It arrived in Australia almost as soon as colonisation began in 1788. New Zealand and South Africa followed in the early years of the 19th century.
        Cricket never caught on in Canada, despite efforts by the upper class to promote the game as a way of identifying with the "mother country". Canada, unlike Australia and the West Indies, witnessed a continual decline in the popularity of the game during 1860 to 1960. Linked in the public consciousness to an upper-class sport, the game never became popular with the general public. In the summer season it had to compete with baseball. During the First World War, Canadian units stationed in France played baseball instead of cricket."</string>
    <string name="dev_laws">"  It's not clear when the basic rules of cricket such as bat and ball, the wicket, pitch dimensions, overs, how out, etc. were originally formulated. In 1728, the Duke of Richmond and Alan Brodick drew up Articles of Agreement to determine the code of practice in a particular game and this became a common feature, especially around payment of stake money and distributing the winnings given the importance of gambling.
        In 1744, the Laws of Cricket were codified for the first time and then amended in 1774, when innovations such as lbw, middle stump and maximum bat width were added. These laws stated that "the principals shall choose from amongst the gentlemen present two umpires who shall absolutely decide all disputes". The codes were drawn up by the so-called "Star and Garter Club" whose members ultimately founded the Marylebone Cricket Club at Lord's in 1787. The MCC immediately became the custodian of the Laws and has made periodic revisions and recodifications subsequently."</string>
    <string name="int_cric">"  In 1859, a team of leading English professionals set off to North America on the first-ever overseas tour and, in 1862, the first English team toured Australia. Between May and October 1868, a team of Aboriginal Australians toured England in what was the first Australian cricket team to travel overseas."</string>
    <string name="int_cric2">"  In 1877, an England touring team in Australia played two matches against full Australian XIs that are now regarded as the inaugural Test matches. The following year, the Australians toured England for the first time and the success of this tour ensured a popular demand for similar ventures in future. No Tests were played in 1878 but more soon followed and, at The Oval in 1882, the Australian victory in a tense finish gave rise to The Ashes.
        South Africa became the third Test nation in 1889."</string>
    <string name="no_of_players">"  A match is played between two sides, each of eleven players, one of whom shall be captain. By agreement a match may be played between sides of fewer than, or more than, eleven players, but not more than eleven players may field at any time. If, during the match and for whatever reason, a side is reduced to fewer than the original number of nominated players, the match shall continue as long as it is possible to do so under the Laws or any agreements made before the toss."</string>
    <string name="nom_and_rep1">"<b>1.2.1</b> Each captain shall nominate his/her players in writing to one of the umpires before the toss."</string>
    <string name="nom_and_rep2">"<b>1.2.2</b> No player may be replaced after the nomination without the consent of the opposing captain."</string>
    <string name="nom_and_rep3">"<b>1.2.3</b> Any replacement player shall be considered the same player as the nominated player he/she replaced for the purposes of these Laws.\n"</string>
    <string name="nom_and_rep4">"1.2.3.1 A replacement shall not bat in an innings in which the nominated player he/she is replacing has completed his/her innings.\n "</string>
    <string name="nom_and_rep5">"1.2.3.2 Any unserved Penalty time, warnings or suspensions, that applied to the original nominated player will be inherited by his/her replacement."</string>
    <string name="crease">"The positions of a bowling crease, a popping crease and two return creases shall be marked by white lines, as set out in 7.2, 7.3 and 7.4, at each end of the pitch.  See Appendix C."</string>
    <string name="crease2">"The bowling crease, which is the back edge of the crease marking, is the line that marks the end of the pitch, as in Law 6.1 (Area of pitch).  It shall be 8 ft 8 in/2.64 m in length."</string>
    <string name="crease3">"The popping crease, which is the back edge of the crease marking, shall be in front of and parallel to the bowling crease and shall be 4 ft/1.22 m from it.  The popping crease shall be marked to a minimum of 6 ft/1.83 m on either side of the imaginary line joining the centres of the two middle stumps and shall be considered to be unlimited in length."</string>
    <string name="crease4">"The return creases, which are the inside edges of the crease markings, shall be at right angles to the popping crease at a distance of 4 ft 4 in/1.32 m either side of the imaginary line joining the centres of the two middle stumps.  Each return crease shall be marked from the popping crease to a minimum of 8 ft/2.44 m behind it and shall be considered to be unlimited in length."</string>
</resources>