<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <!-- Content Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- Section 1.1 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lato_black"
                    android:text="1.1 Number of players"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/no_of_players"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <!-- Section 1.2 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lato_black"
                    android:text="1.2 Nomination and replacement of players"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/nom_and_rep1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/nom_and_rep2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/nom_and_rep3"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/nom_and_rep4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/nom_and_rep5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <!-- Section 1.3 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lato_black"
                    android:text="1.3 Captain"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="1.3.1 If at any time the captain is not available, a deputy shall act for him."
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="1.3.2 If a captain is not available during the period in which the toss is to take place, then the deputy must be responsible for the toss."
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <!-- Section 1.4 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lato_black"
                    android:text="1.4 Responsibility of captains"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="4dp"
                    android:text="The captains are responsible at all times for ensuring that play is conducted within the spirit and traditions of the game, as described in The Preamble – The Spirit of Cricket, as well as within the Laws."
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
